# ipc_primitives

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  semaphore.cpp  semaphore.hpp  shared_memory.cpp  shared_memory.hpp
src/ipc/: semaphore.cpp  semaphore.hpp  shared_memory.cpp  shared_memory.hpp  spsc_queue.hpp
test/: CMakeLists.txt  test1.cpp  test_queue1.cpp  test_queue2.cpp
